--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -1,5 +1,5 @@
-name: Jekflix
-title: Jekflix | A blog theme for Jekyll
+name: GUO
+title: 用于记录生活和工作的博客
 description: Jekflix is a template for Jekyll inspired by Netflix and made by
   Thiago Rossener.
 tags:
